# gyan

./: .gitignore  README.md  docker-compose.yaml
rag/: .gitignore  README.md  colpali.py  custom_dataset.py  data_set.py  file_converter.py  main.py  model.py  pyproject.toml  vdb_qdrant.py
restruct/: README.md  main.py  models.py  parse.py  pyproject.toml
