[tool.poetry]
name = "gyan-rag"
version = "0.1.0"
description = ""
authors = ["Chauhan Akash <ch.m.aakash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.5"}
colpali-engine = "^0.3.4"
datasets = "^3.1.0"
qdrant-client = "^1.12.1"
transformers = "^4.46.3"
stamina = "^24.3.0"
rich = "^13.9.4"
pdf2image = "^1.17.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pytest = "^8.3.3"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
